--- a/login.html
+++ b/login.html
@@ -2,17 +2,16 @@
 <html lang="es">
 
 <head>
-  <title>Index</title>
+  <title>Login</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <!--Iconos-->
+  <link rel="stylesheet" type="text/css" href="fonts/Linearicons/icon-font.min.css">
+   <!--Iconos-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -33,19 +32,45 @@
           <div class="col-md-2">
             <h3 class="text-light">Logo</h3>
           </div>
+		 
+		     <div class="col-md-3">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input my-lg-2" id="exampleCheck1">
+                <label class="form-check-label text-light " for="exampleCheck1">Necesidades activas</label>
+              <button type="submit" class="btn btn-primary"><i class="fa fa-refresh" aria-hidden="true"></i></button>
+            </div>
+          </div>
+		  
+		  <div class="col-md-4">
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-1" type="text" placeholder="Búsqueda" aria-label="Búsqueda">
+              <button class="btn btn-outline-primary btn-rounded my-2 my-sm-0 text-light" type="submit">Buscar</button>
+            </form>
+          </div>
 
           <div class="col-md-4">
             <ul class="navbar-nav ">
-		
-   
+              <li class="nav-item active">
+                <a class="nav-link hover text-light" href="#">Inicio</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link hover text-light" href="#">Necesidades</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link hover text-light" href="#">Contacto</a>
+              </li>
 
-            </ul>
-          </div>
+              <li class="nav-item active">
+                <button class="btn btn-outline-primary btn-rounded my-4 my-sm-2" type="submit"><i
+                    class="fa fa-user-circle" aria-hidden="true"></i></button>
+              </li>
+			 </ul>
+		 
         </div>
       </div>
+  </div>
     </nav>
     <!-- Termina la definición del menú -->
-  </div>
 
 
 <div class="limiter">
@@ -58,10 +83,14 @@
 				<form class="login100-form validate-form p-b-33 p-t-5">
 					<div class="wrap-input100 validate-input" data-validate = "email">
 						<input class="input100" type="text" name="email" placeholder="Email">
+						<span class="focus-input100" data-placeholder="&#xe82a;"></span> 
+
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="contraseña">
 						<input class="input100" type="password" name="pass" placeholder="Contraseña">
+						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
+
 					</div><br>
 
 					<div class="container-login100-form-btn m-t-32">
