--- a/login.html
+++ b/login.html
@@ -73,14 +73,13 @@
     <!-- Termina la definición del menú -->
 
 
-<div class="limiter">
 		<div class="container-login100" style="background-image: url('img/5.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
 					Iniciar sesión
 				</span><br>
 				
-				<form class="login100-form validate-form p-b-33 p-t-5">
+				<form class="login100-form validate-form p-b-33 p-t-5" method="post">
 					<div class="wrap-input100 validate-input" data-validate = "email">
 						<input class="input100" type="text" name="email" placeholder="Email">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span> 
@@ -103,7 +102,7 @@
 					</div>
 				</form>
 			</div>
-		</div>
+		
 	</div>
 
   
